examples/http-default-error-handling/http_default_error_handling.server.out
$ bal run http_resource_error_handling.bal

error: Something wrong with the connection
cause: Connection refused: localhost/127.0.0.1:9091
